# forest_game

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FindGLFW3.cmake  Player.cpp  Player.hpp  README.md  RockObject.cpp  RockObject.h  SceneObject.cpp  SceneObject.hpp  TreeObject.cpp  TreeObject.h  World.cpp  World.hpp  controls.cpp  controls.hpp  forestMain.cpp  model.cpp  model.hpp  playground2.cpp
Params/: SceneParams.h
Resources/: CMakeLists.txt
SceneObjects/: AvailableParameters.h  Model.cpp  Model.hpp  RockObject.cpp  RockObject.hpp  SParam.h  SceneObject.cpp  SceneObject.hpp  SceneParams.h  TreeObject.cpp  TreeObject.hpp  Vertex.hpp
config/: keymappings.yaml
include/: Player.hpp  World.hpp  headers.hpp
include/Params/: AvailableParameters.h  ParamArray.hpp  SParam.hpp  SceneParams.h  SceneParams.hpp
include/SceneObjects/: Color.hpp  Function.hpp  Model.hpp  RockObject.hpp  SceneObject.hpp  SkyObject.hpp  TreeObject.hpp
src/: CMakeLists.txt  FontFragmentShader.glsl  FontVertexShader.glsl  Player.cpp  Player.hpp  SimpleFragmentShader.glsl  SimpleVertexShader.glsl  World.cpp  World.hpp  forestMain.cpp  shader.cpp  text.cpp
src/Params/: AvailableParameters.h  AvailableParameters.h.gch  SParam.cpp  SParam.h  SceneParams.cpp  SceneParams.h
src/SceneObjects/: Color.hpp  Function.hpp  Model.cpp  Model.hpp  RockObject.cpp  SceneObject.hpp  SkyObject.cpp  SkyObject.hpp  TreeObject.cpp
test/: CMakeLists.txt  tests.cpp
